# funasr-onnx-qurat-cpu

./: CMakeLists.txt  README.md
scripts/: build.sh  run.sh
src/: funasr_engine.cpp  funasr_engine.h  main.cpp  utils.cpp  utils.h
